# to_do_list

./: .gitignore  db.sqlite3  pyproject.toml
authentication/: urls.py
core/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/filters/: posted_filters.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test.py
